--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -322,7 +322,7 @@ A major shortcoming when validating RDF data is redundancy.
 %But if we define {\em author} as sub-property of {\em creator} and if we relate a book to an author, the {\em creator} relationship is inferred when performing reasoning.
 %As a consequence, reasoning resolves constraint violations when book creators are not stated explicitly. 
 %%If we define {\em editor} as a sub-property of {\em creator}, {\em creator} relationships can be inferred when conference proceedings and journal volumes (which are publications) have {\em editor} relationships.
-\emph{Reasoning} seems to be a promising solution as pre-validation step to overcome this shortcoming. Reasoning in Semantic Web, refers to the operational process of making the implicitly available knowledge explicitly available  e.g.,  assume that we know ``books are publications" and ``{\em Proof Theory} is a book", now we can derive implicitly available knowledge ``\emph{Proof Theory} is a publication" and make it explicit by adding to the list of \emph{what is known} \footnote{The list of \emph{what is known} or \emph{facts}  as a collection of formal statements in a formal language is generally referred to as a \emph{knowledge base}.}.
+\emph{Reasoning} seems to be a promising solution as pre-validation step to overcome this shortcoming. Reasoning in Semantic Web, refers to the operational process of making the implicitly available knowledge explicitly available  e.g.,  assume that we know ``books are publications" and ``{\em Proof Theory} is a book", now we can derive implicitly available knowledge ``\emph{Proof Theory} is a publication" and make it explicit by adding it to the list of \emph{what is known} \footnote{The list of \emph{what is known} or \emph{facts}  as a collection of formal statements in a formal language is generally referred to as a \emph{knowledge base}.}.
 
 
 Reasoning are also used to detect contradictions   
