--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -715,16 +715,18 @@ we conclude that Mark Twain must be a person.
 As Mark Twain is not explicitly defined to be a person, however, a constraint violation is raised.
 But if we apply a reasoner before validating, this constraint violation is resolved since the implicit triple \ms{Person(Mark-Twain)} is inferred. 
 Reasoning may cause additional constraint violations needed to enhance data quality, e.g., as books are publications constraint on publications are also validated for books (such as each publication must have a publisher).
-
+Most of the constraint languages except OWL, have a major shortcoming of redundancy.
+With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
 \tb{there is no example for solving redundancy problem / can we use the one of the introduction (just referring to this example in 1 sentence)}
 %\tb{we have no example why R causes new valuable constraint violations}
+
 \tb{the next 2 paragraphs are about differences in semantics}
 OWL is based on the {\em non-unique name assumption (nUNA)} whereas RDF validation requires that different names represent different objects (a.k.a. {\em unique name assumption (UNA)}). 
 This ambiguity in semantics is one of the main reasons why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
 OWL's semantics is also based on the {\em open-world assumption (OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
-Most of the constraint languages except OWL, have a major shortcoming of redundancy.
-With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
-\tb{the following example does not show the redundancy problem!}
+%Most of the constraint languages except OWL, have a major shortcoming of redundancy.
+%With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
+%\tb{the following example does not show the redundancy problem!}
 %\tb{2. benefit: reasoning solves redundancy problem}
 As each book must have a title (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and {\em Hamlet} is a book (\ms{Book(Hamlet)}),
 the book {\em Hamlet} must have at least one title.
