--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -307,27 +307,25 @@ Their relevance varies with respect to several foremost criteria in the validati
 %Reasoning is the process of determining what follows from what has been
 %stated.
 
-A major shortcoming when validating RDF data is redundancy.
+A major shortcoming when validating RDF data is \emph{redundancy}.
 %\emph{Reasoning} is a promising solution as pre-validation step to overcome this weakness. Reasoning (logical) is used in order to make the implicit knowledge explicit 
 %(e.g., as books are publications and {\em Foundations of Semantic Web Technologies} is a book, it is also a publication). 
 %Reasoning can be used to recognize impossibilities 
 %(e.g., conference proceedings are publications, the {\em ESWC 2014 proceedings} are conference proceedings but not a publication, therefore leading to a contradiction).
-%Books, conference proceedings, and journal articles must have a publication date.
-%When defining books, conference proceedings, and journal articles as sub-classes of publication, 
-%we associate this constraint with the super-class {\em Publication} and do not have to assign it to each of its sub-classes (which would lead to redundancy).
-%When performing reasoning, it is inferred that instances of publication sub-classes are also publications which therefore must have a publication date
+Consider that a \emph{publication} must have a \emph{publication date} which is a typical constraint.
+Defining \emph{books}, \emph{conference proceedings}, and \emph{journal articles} as a subclass of \emph{publication}, one would require to assign the concerned constraint explicitly for each, since each of them should have a \emph{publication date}, which is a typical example of redundancy. Reasoning\footnote{ Reasoning in Semantic Web} refers to logical reasoning that  makes implicitly available knowledge explicitly available. is a promising solution as pre-validation step to overcome this shortcoming. Performing reasoning one can automatically infer that \emph{books} have \emph{publication date} from the facts of \emph{books} are \emph{publications}, and \emph{publications} have \emph{publications date}.  Hence, associating the constraint to the super-class \emph{publication} instead, one can overcome this problem.
+
 %(i.e., the constraint is also validated for instances of sub-classes).
 %If we define that books must have at least one author, publications must have at least one creator, and books are publications, books must also have at least one creator.
 %Hence, we need to define authors as well as creators for books having identical values.
 %But if we define {\em author} as sub-property of {\em creator} and if we relate a book to an author, the {\em creator} relationship is inferred when performing reasoning.
 %As a consequence, reasoning resolves constraint violations when book creators are not stated explicitly. 
 %%If we define {\em editor} as a sub-property of {\em creator}, {\em creator} relationships can be inferred when conference proceedings and journal volumes (which are publications) have {\em editor} relationships.
-\emph{Reasoning} is a promising solution as pre-validation step to overcome this shortcoming. Reasoning in Semantic Web, refers to the operational process of making the implicitly available knowledge explicitly available  e.g.,  assume that we know ``books are publications" and ``{\em Proof Theory} is a book", now we can derive implicitly available knowledge ``\emph{Proof Theory} is a publication" and make it explicit by adding it to the list of \emph{what is known} \footnote{The list of \emph{what is known} or \emph{facts}  as a collection of formal statements in a formal language is generally referred to as a \emph{knowledge base}.}.
+ %Reasoning in Semantic Web, refers to the operational process of making the implicitly available knowledge explicitly available  e.g.,  assume that we know ``books are publications" and ``{\em publication} is a book", now we can derive implicitly available knowledge ``\emph{Proof Theory} is a publication" and make it explicit by adding it to the list of \emph{what is known} 
 
 
-Reasoning are also used to detect contradictions   
-(e.g., ``conference proceedings are publications", ``the {\em ESWC 2014 proceedings} are conference proceedings but not a publication", which would in return yield a contradiction).
-
+%Reasoning are also used to detect contradictions   
+%(e.g., ``conference proceedings are publications", ``the {\em ESWC 2014 proceedings} are conference proceedings but not a publication", which would in return yield a contradiction).
 %Books, conference proceedings, and journal articles must have a publication date.
 %When defining books, conference proceedings, and journal articles as sub-classes of publication, 
 %we associate this constraint with the super-class publication and do not have to assign it to each of the publication sub-classes (which would lead to redundancy).
@@ -675,7 +673,7 @@ There have been long and controversial discussions\footnote{\url{http://lists.w3
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
 In practice, OWL 2 is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should be created.
 RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy.
-Consider the following DL knowledge base $\mathcal{K}$:
+Consider the following DL knowledge base $\mathcal{K}$ \footnote{ The \emph{knowledge base} or the list of \emph{what is known} is a collection of formal statements in that formal language.}:
 \begin{center}
 \begin{DL} 
 $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsubseteq \forall$ author.Person }\\
