--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -313,7 +313,7 @@ A major shortcoming when validating RDF data is \emph{redundancy}.
 %Reasoning can be used to recognize impossibilities 
 %(e.g., conference proceedings are publications, the {\em ESWC 2014 proceedings} are conference proceedings but not a publication, therefore leading to a contradiction).
 Consider that a \emph{publication} must have a \emph{publication date} which is a typical constraint.
-Defining \emph{books}, \emph{conference proceedings}, and \emph{journal articles} as a subclass of \emph{publication}, one would require to assign the concerned constraint explicitly for each, since each of them should have a \emph{publication date}, which is a typical example of redundancy. Reasoning\footnote{ Reasoning in Semantic Web} refers to logical reasoning that  makes implicitly available knowledge explicitly available. is a promising solution as pre-validation step to overcome this shortcoming. Performing reasoning one can automatically infer that \emph{books} have \emph{publication date} from the facts of \emph{books} are \emph{publications}, and \emph{publications} have \emph{publications date}.  Hence, associating the constraint to the super-class \emph{publication} instead, one can overcome this problem.
+Defining \emph{books}, \emph{conference proceedings}, and \emph{journal articles} as a subclass of \emph{publication}, one would require to assign the concerned constraint explicitly for each, since each of them should have a \emph{publication date}, which is a typical example of redundancy. Reasoning \footnote{Reasoning in Semantic Web refers to logical reasoning that  makes implicitly available knowledge explicitly available.} is a promising solution as pre-validation step to overcome this shortcoming. Performing reasoning one can automatically infer that \emph{books} have \emph{publication date} from the facts of \emph{books} are \emph{publications}, and \emph{publications} have \emph{publications date}.  Hence, associating the constraint to the super-class \emph{publication} instead, one can overcome this problem.
 
 %(i.e., the constraint is also validated for instances of sub-classes).
 %If we define that books must have at least one author, publications must have at least one creator, and books are publications, books must also have at least one creator.
