--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -667,7 +667,7 @@ Related work, conclusion and future work finalize the paper.
 %\begin{itemize}
 	%\item advantages and disadvantages of OWL in terms of validation
 %\end{itemize}
-OWL 2 is an expressive semantic web language which is based on description logics, offering knowledge representation and reasoning services. Validation, however, does not appear to be \tb{does not appear to be --> Kai mentioned this does not sound that scientific}a genuine part of it.  
+OWL is an expressive semantic web language which is based on description logics, offering knowledge representation and reasoning services. OWL 2 is an extended new version of it. Validation, however, is not the primary purpose of its design. 
 This has lead to claims that OWL 2 cannot be used for validation. 
 There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL 2 should be used for RDF validation.
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
