--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -714,7 +714,7 @@ we conclude that Mark Twain must be a person.
 %Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
 As Mark Twain is not explicitly defined to be a person, however, a constraint violation is raised.
 But if we apply a reasoner before validating, this constraint violation is resolved since the implicit triple \ms{Person(Mark-Twain)} is inferred. 
-Reasoning may cause additional constraint violations needed to enhance data quality, e.g., as books are publications constraint on publications are also validated for books (such as each publication must have a publisher).
+Reasoning may cause additional constraint violations needed to enhance data quality, e.g., as books are publications, constraints on publications are also validated for books (e.g. each publication must have a publisher).
 Most of the constraint languages except OWL, have a major shortcoming of redundancy.
 With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
 \tb{there is no example for solving redundancy problem / can we use the one of the introduction (just referring to this example in 1 sentence)}
