--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -706,15 +706,15 @@ $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsu
 %\end{DL}
 %\end{center}
 
-As we know that books can only have persons as authors (\ms{Book $\sqsubseteq \forall$ author.Person}), 
-{\em Huckleberry-Finn} is a book  (\ms{Book(Huckleberry-Finn)}), 
-and Mark Twain is its author (\ms{author(Huckleberry-Finn, Mark-Twain)},
-we conclude that Mark Twain must be a person.
+As we know that \emph{books} can only have \emph{persons} as \emph{authors} (\ms{Book $\sqsubseteq \forall$ author.Person}), 
+{\em Huckleberry-Finn} is a \emph{book}  (\ms{Book(Huckleberry-Finn)}), 
+and Mark Twain is its \emph{author} (\ms{author(Huckleberry-Finn, Mark-Twain)},
+we conclude that Mark Twain must be a \emph{person}.
 %The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
 %Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
-As Mark Twain is not explicitly defined to be a person, however, a constraint violation is raised.
+As Mark Twain is not explicitly defined to be a \emph{person}, however, a constraint violation is raised.
 But if we apply a reasoner before validating, this constraint violation is resolved since the implicit triple \ms{Person(Mark-Twain)} is inferred. 
-Reasoning may cause additional constraint violations needed to enhance data quality, e.g., as books are publications, constraints on publications are also validated for books (e.g. each publication must have a publisher).
+Reasoning may cause additional constraint violations needed to enhance data quality, e.g., as \emph{books} are \emph{publications}, constraints on publications are also validated for \emph{books} (e.g. each publication must have a publisher).
 Most of the constraint languages except OWL, have a major shortcoming of redundancy.
 With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
 \tb{there is no example for solving redundancy problem / can we use the one of the introduction (just referring to this example in 1 sentence)}
