--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -712,7 +712,7 @@ and \emph{Mark Twain} is its \emph{author} (\ms{author(Huckleberry-Finn, Mark-Tw
 we conclude that \emph{Mark Twain} must be a \emph{person}.
 %The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
 %Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
-As Mark Twain is not explicitly defined to be a \emph{person}, however, a constraint violation is raised.
+As \emph{Mark Twain} is not explicitly defined to be a \emph{person}, however, a constraint violation is raised.
 But if we apply a reasoner before validating, this constraint violation is resolved since the implicit triple \ms{Person(Mark-Twain)} is inferred. 
 Reasoning may cause additional constraint violations needed to enhance data quality, e.g., as \emph{books} are \emph{publications}, constraints on publications are also validated for \emph{books} (e.g. each publication must have a publisher).
 Most of the constraint languages except OWL, have a major shortcoming of redundancy.
