--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -708,7 +708,7 @@ $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsu
 
 As we know that \emph{books} can only have \emph{persons} as \emph{authors} (\ms{Book $\sqsubseteq \forall$ author.Person}), 
 {\em Huckleberry-Finn} is a \emph{book}  (\ms{Book(Huckleberry-Finn)}), 
-and \emph{Mark Twain} is its \emph{author} (\ms{author(Huckleberry-Finn, Mark-Twain)},
+and \emph{Mark Twain} is its \emph{author} (\ms{author(Huckleberry-Finn, Mark-Twain)}),
 we conclude that \emph{Mark Twain} must be a \emph{person}.
 %The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
 %Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
