--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -800,16 +800,16 @@ The subsequent steps are needed to determine the performance (i.e. computational
 
 \subsection{Dependency on CWA with UNA}
 
-The distinction of constraint types regarding the dependency on CWA and UNA is an important aspect when combining reasoning with validation,
-as OWL 2 reasoning requires {\em OWA} and {\em nUNA} and RDF validation is based on {\em UNA} (different names represent different objects) and
-{\em CWA} (a statement is inferred to be false if it cannot be proved to be true).
-We classify constraint types according to the dependency on CWA and UNA:
+The distinction of constraint types regarding the dependency on the CWA and the UNA is an important aspect when combining reasoning with validation,
+as OWL 2 reasoning requires the OWA with the nUNA and RDF validation is based on the UNA (different names represent different objects) and
+the CWA (a statement is inferred to be false if it cannot be proved to be true).
+We classify constraint types according to the dependency on the CWA with UNA:
 \begin{enumerate}
 	\item $\mathcal{C}_{CWA}$: CWA and UNA dependent constraint types
 	\item $\overline{\mathcal{C}_{CWA}}$: CWA and UNA independent constraint types
 \end{enumerate}
 
-$\mathcal{C}_{CWA}$ contains constraint types for which it makes a difference if CWA/UNA or OWA/nUNA is assumed.
+$\mathcal{C}_{CWA}$ contains constraint types for which it makes a difference if the CWA/ UNA or the OWA/nUNA is assumed.
 $\mathcal{C}_{CWA}$ is defined as follows:
 For a given constraint type, if there exists no RDF data set that would be inconsistent under CWA/UNA and
 consistent under OWA/nUNA, then the constraint type is dependent of CWA/UNA.
